--- a/display.ipynb
+++ b/display.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -27,14 +27,14 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv(r'C:\\Users\\Chuck\\Desktop\\arduino\\light_monitor\\power.csv')#this creates a dataframe read in by pandas\n",
+    "dataset = pd.read_csv(r'C:\\Users\\Chuck\\Documents\\Programs\\arduino\\light_monitor\\power.csv')#this creates a dataframe read in by pandas\n",
     "X = dataset.iloc[:,:].values \n",
     "print(dataset.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
